k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api                 # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: blog-back-service # ім'я сервісу
                port:
                  number: 80           # порт на якому запущено сервіс
                  
          - path: /                    # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: frontend-service # ім'я сервісу
                port:
                  number: 4200           # порт на якому запущено сервіс
